--- a/react-app/src/Components/Tradecreate.css
+++ b/react-app/src/Components/Tradecreate.css
@@ -1,4 +1,4 @@
-.Create {
+.Tradecreate{
     text-align: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,7 +7,7 @@
   
     }
 
-    .ba{
+    .baT{
       background-color: rgb(212, 211, 211);
       padding: 0px 60px;
       border-radius: 10px;
