--- a/react-app/src/Components/IssueUpdate.css
+++ b/react-app/src/Components/IssueUpdate.css
@@ -66,7 +66,7 @@
     flex: 0 0 200px;
     margin-left: 10px;
     }
-    .butn{
+    .butnIU{
     color: white;
     background-color: rgb(94, 213, 243);
     border-radius: 5px;
